js/js.translator/testData/incremental/invalidation/circleExportsUpdate/lib1/f.0.kt
fun f1() = "${f1_1()} ${f2_1()} ${f3_1()}"

fun f2() = "empty"
